fix styles on safari, chrome, general cleanup

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -9,7 +9,7 @@ html {
   body {
     overflow: hidden;
     margin: 0;
-    font: 400 15px/1.8 "Lato", sans-serif;
+    font-family: 'Helvetica', 'Arial', sans-serif;
   }
 }
 ::-webkit-scrollbar {
