--- a/src/scss/Parallax.scss
+++ b/src/scss/Parallax.scss
@@ -1,13 +1,17 @@
+/* component styles */
+
 .parallax-container {
   position: absolute;
-  top: 30px;
-  bottom: 30px;
-  right: 30px;
-  left: 30px;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  padding: 30px;
   overflow-x: hidden;
   overflow-y: auto;
   -webkit-perspective: 300px;
   perspective: 300px;
+  background-color: $lightGrey;
 
   .parallax-group {
     position: relative;
@@ -33,8 +37,8 @@
         z-index: -2;
       }
       &.parallax-layer--1 {
-        -webkit-transform: translateZ(-300px) translateX(-8px) scale(2);
-        transform: translateZ(-300px) translateX(-8px) scale(2);
+        -webkit-transform: translateZ(-300px) scale(2);
+        transform: translateZ(-300px) scale(2);
         z-index: -1;
       }
       &.parallax-layer-0 { /* base layer */
@@ -49,7 +53,7 @@
       }
       &.parallax-layer-2 {
         -webkit-transform: translateZ(135px) scale(.55);
-        transform: translateZ(135px) translateX(3px) scale(.55);
+        transform: translateZ(135px) scale(.55);
         z-index: 1;
       }
       .parallax-img {
@@ -59,65 +63,102 @@
         object-fit: cover;
       }
     }
-  }
 
-  .parallax-group-1 {
-    .parallax-layer-img {
-      .parallax-img {
-        object-position: 65% 50%;
+    /* group styles */
+
+    &.parallax-group-1 {
+      .parallax-layer-img {
+        .parallax-img {
+          border-radius: 8px 8px 0 0;
+          object-position: 65% 50%;
+        }
       }
     }
+    &.parallax-group-3 {
+      .parallax-img {
+        object-position: 70% 50%;
+      }
+    }
+    &.parallax-group-5 {
+      .parallax-img {
+        object-position: 95% 50%;
+      }
+    }
+    &.parallax-group-6 {
+      .parallax-layer {
+        border-radius: 0 0 8px 8px;
+      }
+    }
+    &.parallax-group-2, &.parallax-group-4, &.parallax-group-6 {
+      z-index: 1;
+
+      .parallax-layer-0 {
+        background: $lightYellow;
+      }
+    }
+    &.parallax-group-1, &.parallax-group-6 {
+      height: calc(100vh - 30px)
+    }
+
+    /* layer styles */
 
     .parallax-layer-name {
       justify-content: flex-end;
 
       .name {
         padding: 10px;
-        margin-bottom: 5vh;
-        background-color: black;
-        opacity: 0.85;
-        color: $lightYellow;
-        font-size: 25px;
-        text-transform: uppercase;
-        letter-spacing: 10px;
-        text-align: center;
+        margin-bottom: 10vh;
+        @include largeFont($white);
       }
     }
-  }
-  .parallax-group-2, .parallax-group-4 {
-    z-index: 1;
-
-    .parallax-layer-0 {
-      background: $lightYellow;
+    .parallax-layer-about {
+      .about {
+        @include largeFont($dimGrey);
+      }
     }
-  }
-  .parallax-group-3 {
-    .parallax-img {
-      object-position: 70% 50%;
+    .parallax-layer-experience {
+      color: $dimGrey;
     }
-  }
-  .parallax-group-5 {
     .parallax-layer-social {
-      flex-direction: row;
-      align-items: flex-end;
+      .contact {
+        margin: 15px;
+        @include largeFont($dimGrey);
+      }
+      ul {
+        list-style: none;
+        display: flex;
+        flex-direction: row;
+        align-items: flex-end;
 
-      .social-icon {
-        margin: 0 10px 5vh 10px;
-        font-size: 36px;
-        color: dimgrey;
-        opacity: 0.75;
-        transition:all 0.2s ease;
+        .social-icon {
+          margin: 0 10px 5vh 10px;
+          font-size: 36px;
+          color: $dimGrey;
+          transition:all 0.2s ease;
 
-        &:hover {
-          transform: scale(1.3);
+          &:hover {
+            transform: scale(1.3);
+          }
         }
       }
     }
-    .parallax-img {
-      object-position: 95% 50%;
-    }
   }
-  .parallax-group-1, .parallax-group-5 {
-    height: calc(100vh - 30px)
+
+  /* browser overrides */
+
+  @include firefox {
+    .parallax-layer--1 {
+      transform: translateZ(-300px) translateX(-8px) scale(2) !important;
+    }
+    .parallax-layer-2 {
+      transform: translateZ(135px) translateX(3px) scale(.55) !important;
+    }
+
+    .parallax-group-6 { // fix bottom padding
+      height: 100vh !important;
+      .parallax-layer {
+        bottom: 30px !important;
+      }
+    }
   }
 }
